testing/tests/ui/error_file_path.stderr
error: problems parsing template source in `testing/templates/invalid_syntax.html` at row 1, column 14 near:
       "}"
 --> tests/ui/error_file_path.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: problems parsing template source in `testing/templates/invalid_syntax.html` at row 1, column 14 near:
       "}"
 --> tests/ui/error_file_path.rs:7:10
  |
7 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: problems parsing template source in `testing/templates/invalid_syntax.html` at row 1, column 14 near:
       "}"
  --> tests/ui/error_file_path.rs:11:10
   |
11 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
